Ccompiler/y.output
   0  $accept : Prog $end

   1  Prog : Fonctions

   2  Fonctions :
   3            | Fonction Fonctions

   4  Fonction : tInt tId tPo Args tPf Body

   5  Args :
   6       | tInt tId ArgsN

   7  ArgsN :
   8        | tVg tInt tId ArgsN

   9  Body : tAo Instrs tAf

  10  Instrs :
  11         | Aff tPv Instrs
  12         | Decl tPv Instrs
  13         | Invoc tPv Instrs
  14         | If Instrs
  15         | While Instrs

  16  If : tIf tPo E tPf Body Else

  17  Else :
  18       | tElse Body

  19  E : tId
  20    | tNb
  21    | E tEquEqu E
  22    | E tAnd E
  23    | E tOr E
  24    | Invoc
  25    | tPo E tPf
  26    | E tPlus E
  27    | E tMoins E
  28    | E tInf E
  29    | E tSup E

  30  While : tWhile tPo E tPf Body

  31  Aff : tId tEqu E

  32  Invoc : tId tPo Params tPf

  33  Params :
  34         | E ParamsN

  35  ParamsN : tVg E ParamsN

  36  Decl1 : tId
  37        | tId tEqu E

  38  Decl : tInt Decl1 DeclN

  39  DeclN :
  40        | tVg Decl1 DeclN

state 0
	$accept : . Prog $end  (0)
	Fonctions : .  (2)

	tInt  shift 1
	$end  reduce 2

	Prog  goto 2
	Fonctions  goto 3
	Fonction  goto 4


state 1
	Fonction : tInt . tId tPo Args tPf Body  (4)

	tId  shift 5
	.  error


state 2
	$accept : Prog . $end  (0)

	$end  accept


state 3
	Prog : Fonctions .  (1)

	.  reduce 1


state 4
	Fonctions : Fonction . Fonctions  (3)
	Fonctions : .  (2)

	tInt  shift 1
	$end  reduce 2

	Fonctions  goto 6
	Fonction  goto 4


state 5
	Fonction : tInt tId . tPo Args tPf Body  (4)

	tPo  shift 7
	.  error


state 6
	Fonctions : Fonction Fonctions .  (3)

	.  reduce 3


state 7
	Fonction : tInt tId tPo . Args tPf Body  (4)
	Args : .  (5)

	tInt  shift 8
	tPf  reduce 5

	Args  goto 9


state 8
	Args : tInt . tId ArgsN  (6)

	tId  shift 10
	.  error


state 9
	Fonction : tInt tId tPo Args . tPf Body  (4)

	tPf  shift 11
	.  error


state 10
	Args : tInt tId . ArgsN  (6)
	ArgsN : .  (7)

	tVg  shift 12
	tPf  reduce 7

	ArgsN  goto 13


state 11
	Fonction : tInt tId tPo Args tPf . Body  (4)

	tAo  shift 14
	.  error

	Body  goto 15


state 12
	ArgsN : tVg . tInt tId ArgsN  (8)

	tInt  shift 16
	.  error


state 13
	Args : tInt tId ArgsN .  (6)

	.  reduce 6


state 14
	Body : tAo . Instrs tAf  (9)
	Instrs : .  (10)

	tInt  shift 17
	tId  shift 18
	tIf  shift 19
	tWhile  shift 20
	tAf  reduce 10

	Instrs  goto 21
	Aff  goto 22
	Decl  goto 23
	Invoc  goto 24
	If  goto 25
	While  goto 26


state 15
	Fonction : tInt tId tPo Args tPf Body .  (4)

	.  reduce 4


state 16
	ArgsN : tVg tInt . tId ArgsN  (8)

	tId  shift 27
	.  error


state 17
	Decl : tInt . Decl1 DeclN  (38)

	tId  shift 28
	.  error

	Decl1  goto 29


state 18
	Aff : tId . tEqu E  (31)
	Invoc : tId . tPo Params tPf  (32)

	tPo  shift 30
	tEqu  shift 31
	.  error


state 19
	If : tIf . tPo E tPf Body Else  (16)

	tPo  shift 32
	.  error


state 20
	While : tWhile . tPo E tPf Body  (30)

	tPo  shift 33
	.  error


state 21
	Body : tAo Instrs . tAf  (9)

	tAf  shift 34
	.  error


state 22
	Instrs : Aff . tPv Instrs  (11)

	tPv  shift 35
	.  error


state 23
	Instrs : Decl . tPv Instrs  (12)

	tPv  shift 36
	.  error


state 24
	Instrs : Invoc . tPv Instrs  (13)

	tPv  shift 37
	.  error


state 25
	Instrs : If . Instrs  (14)
	Instrs : .  (10)

	tInt  shift 17
	tId  shift 18
	tIf  shift 19
	tWhile  shift 20
	tAf  reduce 10

	Instrs  goto 38
	Aff  goto 22
	Decl  goto 23
	Invoc  goto 24
	If  goto 25
	While  goto 26


state 26
	Instrs : While . Instrs  (15)
	Instrs : .  (10)

	tInt  shift 17
	tId  shift 18
	tIf  shift 19
	tWhile  shift 20
	tAf  reduce 10

	Instrs  goto 39
	Aff  goto 22
	Decl  goto 23
	Invoc  goto 24
	If  goto 25
	While  goto 26


state 27
	ArgsN : tVg tInt tId . ArgsN  (8)
	ArgsN : .  (7)

	tVg  shift 12
	tPf  reduce 7

	ArgsN  goto 40


state 28
	Decl1 : tId .  (36)
	Decl1 : tId . tEqu E  (37)

	tEqu  shift 41
	tVg  reduce 36
	tPv  reduce 36


state 29
	Decl : tInt Decl1 . DeclN  (38)
	DeclN : .  (39)

	tVg  shift 42
	tPv  reduce 39

	DeclN  goto 43


state 30
	Invoc : tId tPo . Params tPf  (32)
	Params : .  (33)

	tId  shift 44
	tNb  shift 45
	tPo  shift 46
	tPf  reduce 33

	Invoc  goto 47
	E  goto 48
	Params  goto 49


state 31
	Aff : tId tEqu . E  (31)

	tId  shift 44
	tNb  shift 45
	tPo  shift 46
	.  error

	Invoc  goto 47
	E  goto 50


state 32
	If : tIf tPo . E tPf Body Else  (16)

	tId  shift 44
	tNb  shift 45
	tPo  shift 46
	.  error

	Invoc  goto 47
	E  goto 51


state 33
	While : tWhile tPo . E tPf Body  (30)

	tId  shift 44
	tNb  shift 45
	tPo  shift 46
	.  error

	Invoc  goto 47
	E  goto 52


state 34
	Body : tAo Instrs tAf .  (9)

	.  reduce 9


state 35
	Instrs : Aff tPv . Instrs  (11)
	Instrs : .  (10)

	tInt  shift 17
	tId  shift 18
	tIf  shift 19
	tWhile  shift 20
	tAf  reduce 10

	Instrs  goto 53
	Aff  goto 22
	Decl  goto 23
	Invoc  goto 24
	If  goto 25
	While  goto 26


state 36
	Instrs : Decl tPv . Instrs  (12)
	Instrs : .  (10)

	tInt  shift 17
	tId  shift 18
	tIf  shift 19
	tWhile  shift 20
	tAf  reduce 10

	Instrs  goto 54
	Aff  goto 22
	Decl  goto 23
	Invoc  goto 24
	If  goto 25
	While  goto 26


state 37
	Instrs : Invoc tPv . Instrs  (13)
	Instrs : .  (10)

	tInt  shift 17
	tId  shift 18
	tIf  shift 19
	tWhile  shift 20
	tAf  reduce 10

	Instrs  goto 55
	Aff  goto 22
	Decl  goto 23
	Invoc  goto 24
	If  goto 25
	While  goto 26


state 38
	Instrs : If Instrs .  (14)

	.  reduce 14


state 39
	Instrs : While Instrs .  (15)

	.  reduce 15


state 40
	ArgsN : tVg tInt tId ArgsN .  (8)

	.  reduce 8


state 41
	Decl1 : tId tEqu . E  (37)

	tId  shift 44
	tNb  shift 45
	tPo  shift 46
	.  error

	Invoc  goto 47
	E  goto 56


state 42
	DeclN : tVg . Decl1 DeclN  (40)

	tId  shift 28
	.  error

	Decl1  goto 57


state 43
	Decl : tInt Decl1 DeclN .  (38)

	.  reduce 38


state 44
	E : tId .  (19)
	Invoc : tId . tPo Params tPf  (32)

	tPo  shift 30
	tVg  reduce 19
	tPv  reduce 19
	tPf  reduce 19
	tEquEqu  reduce 19
	tAnd  reduce 19
	tOr  reduce 19
	tPlus  reduce 19
	tMoins  reduce 19
	tInf  reduce 19
	tSup  reduce 19


state 45
	E : tNb .  (20)

	.  reduce 20


state 46
	E : tPo . E tPf  (25)

	tId  shift 44
	tNb  shift 45
	tPo  shift 46
	.  error

	Invoc  goto 47
	E  goto 58


state 47
	E : Invoc .  (24)

	.  reduce 24


state 48
	E : E . tEquEqu E  (21)
	E : E . tAnd E  (22)
	E : E . tOr E  (23)
	E : E . tPlus E  (26)
	E : E . tMoins E  (27)
	E : E . tInf E  (28)
	E : E . tSup E  (29)
	Params : E . ParamsN  (34)

	tVg  shift 59
	tEquEqu  shift 60
	tAnd  shift 61
	tOr  shift 62
	tPlus  shift 63
	tMoins  shift 64
	tInf  shift 65
	tSup  shift 66
	.  error

	ParamsN  goto 67


state 49
	Invoc : tId tPo Params . tPf  (32)

	tPf  shift 68
	.  error


state 50
	E : E . tEquEqu E  (21)
	E : E . tAnd E  (22)
	E : E . tOr E  (23)
	E : E . tPlus E  (26)
	E : E . tMoins E  (27)
	E : E . tInf E  (28)
	E : E . tSup E  (29)
	Aff : tId tEqu E .  (31)

	tEquEqu  shift 60
	tAnd  shift 61
	tOr  shift 62
	tPlus  shift 63
	tMoins  shift 64
	tInf  shift 65
	tSup  shift 66
	tPv  reduce 31


state 51
	If : tIf tPo E . tPf Body Else  (16)
	E : E . tEquEqu E  (21)
	E : E . tAnd E  (22)
	E : E . tOr E  (23)
	E : E . tPlus E  (26)
	E : E . tMoins E  (27)
	E : E . tInf E  (28)
	E : E . tSup E  (29)

	tPf  shift 69
	tEquEqu  shift 60
	tAnd  shift 61
	tOr  shift 62
	tPlus  shift 63
	tMoins  shift 64
	tInf  shift 65
	tSup  shift 66
	.  error


state 52
	E : E . tEquEqu E  (21)
	E : E . tAnd E  (22)
	E : E . tOr E  (23)
	E : E . tPlus E  (26)
	E : E . tMoins E  (27)
	E : E . tInf E  (28)
	E : E . tSup E  (29)
	While : tWhile tPo E . tPf Body  (30)

	tPf  shift 70
	tEquEqu  shift 60
	tAnd  shift 61
	tOr  shift 62
	tPlus  shift 63
	tMoins  shift 64
	tInf  shift 65
	tSup  shift 66
	.  error


state 53
	Instrs : Aff tPv Instrs .  (11)

	.  reduce 11


state 54
	Instrs : Decl tPv Instrs .  (12)

	.  reduce 12


state 55
	Instrs : Invoc tPv Instrs .  (13)

	.  reduce 13


state 56
	E : E . tEquEqu E  (21)
	E : E . tAnd E  (22)
	E : E . tOr E  (23)
	E : E . tPlus E  (26)
	E : E . tMoins E  (27)
	E : E . tInf E  (28)
	E : E . tSup E  (29)
	Decl1 : tId tEqu E .  (37)

	tEquEqu  shift 60
	tAnd  shift 61
	tOr  shift 62
	tPlus  shift 63
	tMoins  shift 64
	tInf  shift 65
	tSup  shift 66
	tVg  reduce 37
	tPv  reduce 37


state 57
	DeclN : tVg Decl1 . DeclN  (40)
	DeclN : .  (39)

	tVg  shift 42
	tPv  reduce 39

	DeclN  goto 71


state 58
	E : E . tEquEqu E  (21)
	E : E . tAnd E  (22)
	E : E . tOr E  (23)
	E : tPo E . tPf  (25)
	E : E . tPlus E  (26)
	E : E . tMoins E  (27)
	E : E . tInf E  (28)
	E : E . tSup E  (29)

	tPf  shift 72
	tEquEqu  shift 60
	tAnd  shift 61
	tOr  shift 62
	tPlus  shift 63
	tMoins  shift 64
	tInf  shift 65
	tSup  shift 66
	.  error


state 59
	ParamsN : tVg . E ParamsN  (35)

	tId  shift 44
	tNb  shift 45
	tPo  shift 46
	.  error

	Invoc  goto 47
	E  goto 73


state 60
	E : E tEquEqu . E  (21)

	tId  shift 44
	tNb  shift 45
	tPo  shift 46
	.  error

	Invoc  goto 47
	E  goto 74


state 61
	E : E tAnd . E  (22)

	tId  shift 44
	tNb  shift 45
	tPo  shift 46
	.  error

	Invoc  goto 47
	E  goto 75


state 62
	E : E tOr . E  (23)

	tId  shift 44
	tNb  shift 45
	tPo  shift 46
	.  error

	Invoc  goto 47
	E  goto 76


state 63
	E : E tPlus . E  (26)

	tId  shift 44
	tNb  shift 45
	tPo  shift 46
	.  error

	Invoc  goto 47
	E  goto 77


state 64
	E : E tMoins . E  (27)

	tId  shift 44
	tNb  shift 45
	tPo  shift 46
	.  error

	Invoc  goto 47
	E  goto 78


state 65
	E : E tInf . E  (28)

	tId  shift 44
	tNb  shift 45
	tPo  shift 46
	.  error

	Invoc  goto 47
	E  goto 79


state 66
	E : E tSup . E  (29)

	tId  shift 44
	tNb  shift 45
	tPo  shift 46
	.  error

	Invoc  goto 47
	E  goto 80


state 67
	Params : E ParamsN .  (34)

	.  reduce 34


state 68
	Invoc : tId tPo Params tPf .  (32)

	.  reduce 32


state 69
	If : tIf tPo E tPf . Body Else  (16)

	tAo  shift 14
	.  error

	Body  goto 81


state 70
	While : tWhile tPo E tPf . Body  (30)

	tAo  shift 14
	.  error

	Body  goto 82


state 71
	DeclN : tVg Decl1 DeclN .  (40)

	.  reduce 40


state 72
	E : tPo E tPf .  (25)

	.  reduce 25


state 73
	E : E . tEquEqu E  (21)
	E : E . tAnd E  (22)
	E : E . tOr E  (23)
	E : E . tPlus E  (26)
	E : E . tMoins E  (27)
	E : E . tInf E  (28)
	E : E . tSup E  (29)
	ParamsN : tVg E . ParamsN  (35)

	tVg  shift 59
	tEquEqu  shift 60
	tAnd  shift 61
	tOr  shift 62
	tPlus  shift 63
	tMoins  shift 64
	tInf  shift 65
	tSup  shift 66
	.  error

	ParamsN  goto 83


74: shift/reduce conflict (shift 60, reduce 21) on tEquEqu
74: shift/reduce conflict (shift 61, reduce 21) on tAnd
74: shift/reduce conflict (shift 62, reduce 21) on tOr
74: shift/reduce conflict (shift 63, reduce 21) on tPlus
74: shift/reduce conflict (shift 64, reduce 21) on tMoins
74: shift/reduce conflict (shift 65, reduce 21) on tInf
74: shift/reduce conflict (shift 66, reduce 21) on tSup
state 74
	E : E . tEquEqu E  (21)
	E : E tEquEqu E .  (21)
	E : E . tAnd E  (22)
	E : E . tOr E  (23)
	E : E . tPlus E  (26)
	E : E . tMoins E  (27)
	E : E . tInf E  (28)
	E : E . tSup E  (29)

	tEquEqu  shift 60
	tAnd  shift 61
	tOr  shift 62
	tPlus  shift 63
	tMoins  shift 64
	tInf  shift 65
	tSup  shift 66
	tVg  reduce 21
	tPv  reduce 21
	tPf  reduce 21


75: shift/reduce conflict (shift 60, reduce 22) on tEquEqu
75: shift/reduce conflict (shift 61, reduce 22) on tAnd
75: shift/reduce conflict (shift 62, reduce 22) on tOr
75: shift/reduce conflict (shift 63, reduce 22) on tPlus
75: shift/reduce conflict (shift 64, reduce 22) on tMoins
75: shift/reduce conflict (shift 65, reduce 22) on tInf
75: shift/reduce conflict (shift 66, reduce 22) on tSup
state 75
	E : E . tEquEqu E  (21)
	E : E . tAnd E  (22)
	E : E tAnd E .  (22)
	E : E . tOr E  (23)
	E : E . tPlus E  (26)
	E : E . tMoins E  (27)
	E : E . tInf E  (28)
	E : E . tSup E  (29)

	tEquEqu  shift 60
	tAnd  shift 61
	tOr  shift 62
	tPlus  shift 63
	tMoins  shift 64
	tInf  shift 65
	tSup  shift 66
	tVg  reduce 22
	tPv  reduce 22
	tPf  reduce 22


76: shift/reduce conflict (shift 60, reduce 23) on tEquEqu
76: shift/reduce conflict (shift 61, reduce 23) on tAnd
76: shift/reduce conflict (shift 62, reduce 23) on tOr
76: shift/reduce conflict (shift 63, reduce 23) on tPlus
76: shift/reduce conflict (shift 64, reduce 23) on tMoins
76: shift/reduce conflict (shift 65, reduce 23) on tInf
76: shift/reduce conflict (shift 66, reduce 23) on tSup
state 76
	E : E . tEquEqu E  (21)
	E : E . tAnd E  (22)
	E : E . tOr E  (23)
	E : E tOr E .  (23)
	E : E . tPlus E  (26)
	E : E . tMoins E  (27)
	E : E . tInf E  (28)
	E : E . tSup E  (29)

	tEquEqu  shift 60
	tAnd  shift 61
	tOr  shift 62
	tPlus  shift 63
	tMoins  shift 64
	tInf  shift 65
	tSup  shift 66
	tVg  reduce 23
	tPv  reduce 23
	tPf  reduce 23


77: shift/reduce conflict (shift 60, reduce 26) on tEquEqu
77: shift/reduce conflict (shift 61, reduce 26) on tAnd
77: shift/reduce conflict (shift 62, reduce 26) on tOr
77: shift/reduce conflict (shift 63, reduce 26) on tPlus
77: shift/reduce conflict (shift 64, reduce 26) on tMoins
77: shift/reduce conflict (shift 65, reduce 26) on tInf
77: shift/reduce conflict (shift 66, reduce 26) on tSup
state 77
	E : E . tEquEqu E  (21)
	E : E . tAnd E  (22)
	E : E . tOr E  (23)
	E : E . tPlus E  (26)
	E : E tPlus E .  (26)
	E : E . tMoins E  (27)
	E : E . tInf E  (28)
	E : E . tSup E  (29)

	tEquEqu  shift 60
	tAnd  shift 61
	tOr  shift 62
	tPlus  shift 63
	tMoins  shift 64
	tInf  shift 65
	tSup  shift 66
	tVg  reduce 26
	tPv  reduce 26
	tPf  reduce 26


78: shift/reduce conflict (shift 60, reduce 27) on tEquEqu
78: shift/reduce conflict (shift 61, reduce 27) on tAnd
78: shift/reduce conflict (shift 62, reduce 27) on tOr
78: shift/reduce conflict (shift 63, reduce 27) on tPlus
78: shift/reduce conflict (shift 64, reduce 27) on tMoins
78: shift/reduce conflict (shift 65, reduce 27) on tInf
78: shift/reduce conflict (shift 66, reduce 27) on tSup
state 78
	E : E . tEquEqu E  (21)
	E : E . tAnd E  (22)
	E : E . tOr E  (23)
	E : E . tPlus E  (26)
	E : E . tMoins E  (27)
	E : E tMoins E .  (27)
	E : E . tInf E  (28)
	E : E . tSup E  (29)

	tEquEqu  shift 60
	tAnd  shift 61
	tOr  shift 62
	tPlus  shift 63
	tMoins  shift 64
	tInf  shift 65
	tSup  shift 66
	tVg  reduce 27
	tPv  reduce 27
	tPf  reduce 27


79: shift/reduce conflict (shift 60, reduce 28) on tEquEqu
79: shift/reduce conflict (shift 61, reduce 28) on tAnd
79: shift/reduce conflict (shift 62, reduce 28) on tOr
79: shift/reduce conflict (shift 63, reduce 28) on tPlus
79: shift/reduce conflict (shift 64, reduce 28) on tMoins
79: shift/reduce conflict (shift 65, reduce 28) on tInf
79: shift/reduce conflict (shift 66, reduce 28) on tSup
state 79
	E : E . tEquEqu E  (21)
	E : E . tAnd E  (22)
	E : E . tOr E  (23)
	E : E . tPlus E  (26)
	E : E . tMoins E  (27)
	E : E . tInf E  (28)
	E : E tInf E .  (28)
	E : E . tSup E  (29)

	tEquEqu  shift 60
	tAnd  shift 61
	tOr  shift 62
	tPlus  shift 63
	tMoins  shift 64
	tInf  shift 65
	tSup  shift 66
	tVg  reduce 28
	tPv  reduce 28
	tPf  reduce 28


80: shift/reduce conflict (shift 60, reduce 29) on tEquEqu
80: shift/reduce conflict (shift 61, reduce 29) on tAnd
80: shift/reduce conflict (shift 62, reduce 29) on tOr
80: shift/reduce conflict (shift 63, reduce 29) on tPlus
80: shift/reduce conflict (shift 64, reduce 29) on tMoins
80: shift/reduce conflict (shift 65, reduce 29) on tInf
80: shift/reduce conflict (shift 66, reduce 29) on tSup
state 80
	E : E . tEquEqu E  (21)
	E : E . tAnd E  (22)
	E : E . tOr E  (23)
	E : E . tPlus E  (26)
	E : E . tMoins E  (27)
	E : E . tInf E  (28)
	E : E . tSup E  (29)
	E : E tSup E .  (29)

	tEquEqu  shift 60
	tAnd  shift 61
	tOr  shift 62
	tPlus  shift 63
	tMoins  shift 64
	tInf  shift 65
	tSup  shift 66
	tVg  reduce 29
	tPv  reduce 29
	tPf  reduce 29


state 81
	If : tIf tPo E tPf Body . Else  (16)
	Else : .  (17)

	tElse  shift 84
	tInt  reduce 17
	tId  reduce 17
	tAf  reduce 17
	tIf  reduce 17
	tWhile  reduce 17

	Else  goto 85


state 82
	While : tWhile tPo E tPf Body .  (30)

	.  reduce 30


state 83
	ParamsN : tVg E ParamsN .  (35)

	.  reduce 35


state 84
	Else : tElse . Body  (18)

	tAo  shift 14
	.  error

	Body  goto 86


state 85
	If : tIf tPo E tPf Body Else .  (16)

	.  reduce 16


state 86
	Else : tElse Body .  (18)

	.  reduce 18


State 74 contains 7 shift/reduce conflicts.
State 75 contains 7 shift/reduce conflicts.
State 76 contains 7 shift/reduce conflicts.
State 77 contains 7 shift/reduce conflicts.
State 78 contains 7 shift/reduce conflicts.
State 79 contains 7 shift/reduce conflicts.
State 80 contains 7 shift/reduce conflicts.


23 terminals, 19 nonterminals
41 grammar rules, 87 states
